--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 }
 
 .main {
-  @apply mx-2 my-6 md:mx-auto max-w-[1200px] 
+  @apply my-6 md:mx-auto max-w-[1200px] 
 }
 
 .input , .text-area, textarea {
