--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,24 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-  themes: light --default, dark --prefersdark, cupcake, fantasy;
+  themes:
+    light --default,
+    dark --prefersdark,
+    cupcake,
+    fantasy;
 }
 
-:root,body {
-/* @apply min-w-full min-h-full bg-base-100
-*/}
+:root,
+body {
+  /* @apply min-w-full min-h-full bg-base-100
+*/
+}
 
 .main {
-  @apply my-6 md:mx-auto max-w-[1200px] 
+  @apply my-6 md:mx-auto max-w-300;
 }
 
-.input , .text-area, textarea {
-  @apply w-full
+.input,
+.text-area,
+textarea {
+  @apply w-full;
 }
-
